--- a/index.html
+++ b/index.html
@@ -109,13 +109,7 @@
     <td class="bottonTd2"><div class="botones"><button type="button" class="bottonTdSend">send</button></td>
     
 </tr>
-
-
-
-
-
-
-
+    </table>
 
 </fieldset>
     
